centered landing page tagline and fixed the alignment skewing when resizing

--- a/client/src/Components/LandingPage/LandingPage.less
+++ b/client/src/Components/LandingPage/LandingPage.less
@@ -28,7 +28,7 @@
       flex-direction: column;
       justify-content: center;
       width: 100%;
-      height: 11vh;
+      height: 12vh;
       .Header__Title {
         font-size: 2rem;
         margin-left: 3%;
@@ -39,19 +39,25 @@
       width: 100%;
       .Content__Left {
         width: 50%;
+        border: 1px solid red;
+
         .Left__Tagline {
           margin-top: 13vh;
           height: 25 vh;
           display: flex;
           justify-content: flex-end;
+          border: 1px solid red;
+
           .Tagline__Phrase {
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: flex-end;
+            align-items: center;
+            border: 1px solid red;
+            width: 40%;
             p {
-              font-size: 1.6rem;
-              letter-spacing: 2px;
+              font-size: 1.3rem;
+              letter-spacing: 1.8px;
               margin: 10px 0;
             }
           }
